# Forex-TradingBot

./: .gitignore  AIForexTradeBot.py  ForexTradingBot_Backend.py  LICENSE  README.md  TradingB_BackEnd.py  TradingB_FrontEnd.py  forextrading_FrontEnd.py  forextrading_botNew.py  pyproject.toml  requirements.txt  run.py  run.spec  tradebot_server.py  trading_bot.py
assets/: main.css  style.css
database/: login.db
forextradebotv3/: TradingB_BackEnd.py  TradingB_FrontEnd.py  run.py
forextradebotv3/assets/: style.css
forextradebotv3/database/: login.db
forextradebotv3/modules/: mt5_functions.py  sqlite_functions.py
modules/: TrendML.py  mt5_functions.py  sqlite_functions.py
src/ForexTradeBot/: TradingB_BackEnd.py  run.py
src/ForexTradeBot/modules/: mt5_functions.py  sqlite_functions.py
templates/: base.html  index.html  login.html
tradingbot/: forextrading_bot,py  mt5_functions.py
tradingbot/pages/: login.py
