[tool.poetry]
name = "forextradebotv3"
version = "0.1.0"
description = ""
authors = ["PUAMarcLawrence <83485910+PUAMarcLawrence@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
metatrader5 = "^5.0.4288"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
dash = "^2.17.0"
scikit-learn = "^1.5.0"
waitress = "^3.0.0"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
